--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "template",
+  "name": "template-nextjs-material-design-apollo",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -25,5 +25,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "yarn": "^1.22.4"
-  }
+  },
+  "keywords": [],
+  "description": ""
 }
